<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/verde_oscuro"
    tools:context=".UI.onboarding.Onboarding"
    >

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboardinViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_pager_background"
        app:layout_constraintBottom_toBottomOf="@id/imageNext"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/indicatorContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/textSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/skip"
        android:textSize="16sp"
        android:textColor="@color/custom_color_text_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/imageNext"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/icon_background"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_right"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/materialButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/amarillo_limon"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/guia_rapida"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>